Upgrade gradle to 8.4 (#1289)
Upgrade gradle to 8.4 to support JDK-21. Refer to
https://docs.gradle.org/current/userguide/compatibility.html

Simplifies Jacoco logic. From long ago, jacoco support was added through
a series of hacks. Some of these hacks are no longer necessary, so they
were removed to simplify.

Signed-off-by: John Mazanec <jmazane@amazon.com>
(cherry picked from commit fa57b4b8f4fa1b84c95a3553d54f7a3e49b04efe)